# openai_grammar_checker

./: .env.example  .gitignore  README.md  TODO.md  api.py  benchmark.py  cli.py  interactive.py  main.py  pyproject.toml  requirements.txt  runner.py  start_mongo.py
benchmarks/: test_cases_2.json  test_cases_DEV_2.json
grammar_checker/: config.py  db.py  evaluator.py  grammar_checker.py  logger.py  openai_client.py  prompt_builder.py  utils.py
models/: request.py  response.py
mongo/: mongod.cfg
outputs/: 20250616002734_sentences_details_16fb0eb9-b593-4c9e-81cb-78f69373ec07.csv  20250616002734_sentences_summary_16fb0eb9-b593-4c9e-81cb-78f69373ec07.csv  matching_mistakes_details_16fb0eb9-b593-4c9e-81cb-78f69373ec07.csv  matching_mistakes_summary_16fb0eb9-b593-4c9e-81cb-78f69373ec07.csv  test_results.json
prompts/: v1_original.txt  v2.1_with_example.txt  v2.2_strict_json_structure.txt  v2.3_strict_output_rule.txt  v2.4_less_verbose.txt  v2.5_combined.txt
reporting/: base_reporter.py  csv_reporter.py  data_access.py  evaluate_mistakes.py  evaluate_sentences.py  factory.py  mistakes_report.py  report_runner.py  sentences_report.py  utils.py
tests/: test_api.py  test_benchmark.py  test_cases.json  test_cases_DEV.json  test_cases_REF.json  test_cli.py  test_db.py  test_grammar_checker.py  test_interactive.py  test_logger.py  test_main.py  test_openai_client.py  test_prompt_builder.py  test_runner.py  test_utils.py
tests/grammar_checker/: test_logger.py  test_prompt_builder.py  test_utils.py
tests/reporting/: test_base_reporter.py  test_csv_reporter.py  (+4 more)
