[project]
name = "openai-grammar-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "mongomock>=4.3.0",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
